# CSE-687-

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  FileManager.cpp  FileManager.hpp  GuiApp.cpp  How to run the program.txt  MRP2_Phase3_GUI.sln  MRP2_Phase3_GUI.vcxproj  MRP2_Phase3_GUI.vcxproj.filters  Mapper.cpp  Mapper.hpp  README.md  Reducer.cpp  Reducer.hpp  Workflow.cpp  Workflow.hpp  Workflow_old.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  intermediate.txt  main_cli.cpp  mapper_worker.cpp  phase3_main.cpp  phase4_controller.cpp  reducer_worker.cpp  stub.cpp  stub_server.cpp  word_counts.txt
MRP2_Phase3_GUI.dir/Debug/: MRP2_Phase3_GUI.exe.recipe  MRP2_Phase3_GUI.ilk
MRP2_Phase3_GUI.dir/Debug/MRP2_Phase3_GUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  MRP2_Phase3_GUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
dlls/: MapDLL.cpp  ReduceDLL.cpp
include/: FileManager.hpp  Reducer.hpp
include/mr/: Interfaces.hpp  Logger.hpp  Mapper.hpp  PluginContexts.hpp  PluginLoader.hpp  Types.hpp  Workflow.hpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
